<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.sesma.generik.ui.register.RegisterActivity"
    >

    <ScrollView
        android:id="@+id/form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:context="eu.sesma.generik.ui.register.RegisterActivity"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/bt_register"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:hint="@string/name_hint"
                    android:contentDescription="@string/name_hint"
                    android:autofillHints="name"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:hint="@string/phone_hint"
                    android:contentDescription="@string/phone_hint"
                    android:autofillHints="phone"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:contentDescription="@string/email_hint"
                    android:autofillHints="emailAddress"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:hint="@string/email_confirm_hint"
                    android:contentDescription="@string/email_confirm_hint"
                    android:autofillHints="emailAddress"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_pass1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/pass_hint"
                    android:contentDescription="@string/pass_hint"
                    android:autofillHints="password"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_pass2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/pass_confirm_hint"
                    android:contentDescription="@string/pass_confirm_hint"
                    android:autofillHints="password"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:background="@drawable/primary_button_borderless"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/form"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <android.support.constraint.Guideline android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_left"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintGuide_begin="@dimen/left_guideline_pos"
        />

    <android.support.constraint.Guideline android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_right"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/right_guideline_pos"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <include layout="@layout/wait"/>

</android.support.constraint.ConstraintLayout>
